# openmmgridforce

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
_skbuild/linux-x86_64-3.11/cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeSpec.json  build.ninja  cmake_install.cmake  install_manifest.txt
_skbuild/linux-x86_64-3.11/cmake-build/python/: cmake_install.cmake
_skbuild/linux-x86_64-3.11/cmake-install/: CMakeLists.txt
_skbuild/linux-x86_64-3.11/cmake-install/openmmgridforce/openmmgridforce/: gridforceplugin.py
_skbuild/linux-x86_64-3.11/cmake-install/python/: CMakeLists.txt
_skbuild/linux-x86_64-3.11/cmake-install/python/gridforceplugin.egg-info/: SOURCES.txt
cmake/: FindOpenMM.cmake
devtools/conda-recipe/: build.sh  conda_build_config.yaml  meta.yaml
openmmapi/include/: BondedHessian.h  CachedGridData.h  GridData.h  GridForce.h  GridForceKernels.h  GridForceTypes.h  IsolatedNonbondedForce.h  IsolatedNonbondedForceKernels.h  NewtonMinimizer.h  TiledGridData.h
openmmapi/include/internal/: GridForceImpl.h  IsolatedNonbondedForceImpl.h
openmmapi/src/: BondedHessian.cpp  CachedGridData.cpp  GridData.cpp  GridForce.cpp  GridForceImpl.cpp  IsolatedNonbondedForce.cpp  IsolatedNonbondedForceImpl.cpp  NewtonMinimizer.cpp  TiledGridData.cpp
openmmgridforce/: __init__.py
openmmgridforce.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
openmmgridforce_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
openmmgridforce_build/python/: Makefile  cmake_install.cmake  setup.py
python/: CMakeLists.txt  GridForcePluginWrapper.cpp  grid_io.py  gridforceplugin.i  nc_converter.py  setup.py
python/gridforceplugin.egg-info/: PKG-INFO  top_level.txt
python/tests/: TestReferenceGridForce.py  test_auto_grid.py  test_auto_scaling.py  test_autogrid_save.py  test_bspline.py  test_bspline_tiled.py  test_bspline_tiled_highres.py  test_dx_format.py  test_gpu_autogrid.py  test_grid_force.py  test_invpower2.py  test_simple_grid_energy.py  test_tiled_pipeline.py  test_tricubic.py  test_tricubic_invpower.py  test_tricubic_tiled.py  test_trilinear_tiled.py  test_triquintic.py  test_triquintic_invpower.py  test_triquintic_tiled.py  test_triquintic_tiled_biggrid.py
scripts/: build_package.py
